fixed home page spacing

--- a/scss/type.scss
+++ b/scss/type.scss
@@ -2,6 +2,10 @@ h1 {
   font-family: 'Cantata One', serif;
   color: #3b54ba;
   font-size: 70px;
+
+  @include media-breakpoint-down(md) {
+    font-size: 2.5rem;
+  }
 }
 h2 {
   font-family: 'Cantata One', serif;
